--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
               "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
-              "node_modules/ngx-spinner/animations/ball-square-spin.css"
+              "node_modules/ngx-spinner/animations/ball-square-spin.css",
+              "styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
