--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ngx-order-pipe": "^3.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^17.0.0",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
