--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.0",
     "bootstrap": "^5.3.3",
     "ngx-cookie-service": "^17.1.0",
+    "ngx-dropzone": "^3.1.0",
     "ngx-filter-pipe": "^3.0.0",
     "ngx-order-pipe": "^3.0.0",
     "ngx-pagination": "^6.0.3",
